# ProgTasks

./: Do hchv
C++/sem1/Task11/: N3.cpp
C++/sem1/Task6/: N1Easy.cpp  N2.cpp
C++/sem1/Task7/: N1.cpp  N2.cpp
C++/sem1/Task8/: N1.cpp
C++/sem2/Task1/: main.cpp
Python/Lab1.1/: Task1.py  Task2.1.py  Task2.2.py
Python/Lab10/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py
Python/Lab2/: Task1.py  Task2.py
Python/Lab3/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py  Task6.py
Python/Lab4/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py  Task6.py
Python/Lab5/: Task1.py  Task2.py  Task3.py  Task4.py  input2task.txt  input3task.txt  output2task.txt  outputoldest3task.txt  outputyoungest3task.txt
Python/Lab6/: Task1.py
Python/Lab9/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py  Task6.py  Task7.py  Task8.py
Task11/: N1.cpp  N3.cpp
Task11/Task11/: N3.cpp
Task6/: N1.cpp  N1Easy.cpp  N2.cpp
Task7/: N1.cpp  N2.cpp  N3.cpp  N4.cpp
Task8/: N1.cpp  N2.cpp  N3.cpp
Task9/: Task9.cpp  matrix.cpp  matrix.hpp
sem1/Task11/: N1.cpp
sem1/Task6/: N1.cpp
sem1/Task7/: N3.cpp  N4.cpp
sem1/Task8/: N2.cpp  N3.cpp
sem1/Task9/: Task9.cpp  matrix.cpp  matrix.hpp
sem2/Task1/: CMakeLists.txt
sem2/Task1/inc/: func.hpp
sem2/Task1/src/: func.cpp
sem2/Task2/: CMakeLists.txt  main.cpp
sem2/Task3/: CMakeLists.txt  main.cpp
